Task #P0-12: add profile interview api
